macviews: reset closure animation on ReallyAccept

Accept() can be called more than once on the same MenuController, via context
menus; in this situation, it's important to clear the animation so that input
events get handled after the animation completes.

Bug: 833048
Change-Id: Id3ac92ce91e78b57f2120d4527e35e597ea03067
Reviewed-on: https://chromium-review.googlesource.com/1012876
Reviewed-by: Scott Violet <sky@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#551410}
Former-commit-id: 37ab908e08c8a87602ec455705bad9aedde7a66e